# bc-projected-weather

./: .coveragerc  .gitignore  .travis.yml  README.md  gen_future_weather_file.py  if_no_error_commit.txt  pytest.ini  requirements.txt  setup.cfg  setup.py  test_gen_future_weather_file.py
bcweather/: __init__.py  epw.py  gen_future_weather_file.py  offset_current_weather_file.py
bcweather/tests/: conftest.py  epwtest.sh  offset_with_prism.sh  test_gen_future_weather_file.py  test_prism_find.py  testread.py
bcweather/tests/data/: CAN_BC_ABBOTSFORD-A_1100031_CWEC.epw  pr_lm_subset.nc  tmax_lm_subset.nc  tmin_lm_subset.nc
