[metadata]
name = bcweather
version = 0.0.1
classifiers =
  Environment :: Console
  Programming Language :: Python :: 3 :: Only
  Topic :: Scientific/Engineering :: Atmospheric Science


[options]
zip_safe = False
include_package_data = True
packages = find:
scripts =
  bcweather/gen_future_weather_file.py
install_requires =
  netCDF4
  numpy

[options.package_data]
bcweather = tests/data/*
